# openapi/src/main/java/fr/bankwiz/openapi/model/CurrencyIndexDTO.java
@@ -1,0 +1,145 @@
+package fr.bankwiz.openapi.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+import fr.bankwiz.openapi.model.CurrencyEnum;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * CurrencyIndexDTO
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public class CurrencyIndexDTO {
+
+  private CurrencyEnum currency;
+
+  private String displayName;
+
+  private String symbol;
+
+  public CurrencyIndexDTO() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public CurrencyIndexDTO(CurrencyEnum currency, String displayName) {
+    this.currency = currency;
+    this.displayName = displayName;
+  }
+
+  public CurrencyIndexDTO currency(CurrencyEnum currency) {
+    this.currency = currency;
+    return this;
+  }
+
+  /**
+   * Get currency
+   * @return currency
+  */
+  @NotNull @Valid 
+  @Schema(name = "currency", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("currency")
+  public CurrencyEnum getCurrency() {
+    return currency;
+  }
+
+  public void setCurrency(CurrencyEnum currency) {
+    this.currency = currency;
+  }
+
+  public CurrencyIndexDTO displayName(String displayName) {
+    this.displayName = displayName;
+    return this;
+  }
+
+  /**
+   * Get displayName
+   * @return displayName
+  */
+  @NotNull 
+  @Schema(name = "displayName", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("displayName")
+  public String getDisplayName() {
+    return displayName;
+  }
+
+  public void setDisplayName(String displayName) {
+    this.displayName = displayName;
+  }
+
+  public CurrencyIndexDTO symbol(String symbol) {
+    this.symbol = symbol;
+    return this;
+  }
+
+  /**
+   * Get symbol
+   * @return symbol
+  */
+  
+  @Schema(name = "symbol", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("symbol")
+  public String getSymbol() {
+    return symbol;
+  }
+
+  public void setSymbol(String symbol) {
+    this.symbol = symbol;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    CurrencyIndexDTO currencyIndexDTO = (CurrencyIndexDTO) o;
+    return Objects.equals(this.currency, currencyIndexDTO.currency) &&
+        Objects.equals(this.displayName, currencyIndexDTO.displayName) &&
+        Objects.equals(this.symbol, currencyIndexDTO.symbol);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(currency, displayName, symbol);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class CurrencyIndexDTO {\n");
+    sb.append("    currency: ").append(toIndentedString(currency)).append("\n");
+    sb.append("    displayName: ").append(toIndentedString(displayName)).append("\n");
+    sb.append("    symbol: ").append(toIndentedString(symbol)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
